# EUMETCastView

./: .gitignore  CMakeLists.txt  EUMETCastView.desktop  EUMETCastView.pro  README.md
PublicDecompWT-2.8.1/: CHANGELOG.md  CMakeLists.txt  Makefile  PublicDecompWT.ABOUT  README.md  makefile.vc
PublicDecompWT-2.8.1/COMP/: CMakeLists.txt  COMP.dsp  COMP.plg  Makefile  makefile.vc
PublicDecompWT-2.8.1/COMP/Inc/: Bitlevel.h  CBlock.h  CBuffer.h  CImage.h  CQualityInfo.h  CQualityMeasures.h  Compress.h  RMAErrorHandling.h
PublicDecompWT-2.8.1/COMP/JPEG/: CMakeLists.txt  JPEG.dsp  JPEG.plg
PublicDecompWT-2.8.1/COMP/JPEG/Inc/: CHOptim.h  CHcodec.h  CHufftables.h  CJBlock.h  CJPEGCoder.h  CJPEGDecoder.h  CJPEGLossLessCoder.h  CJPEGLossyCoder.h  CQuantizationTable.h  CompressJPEG.h  JPEGConst.h
PublicDecompWT-2.8.1/COMP/JPEG/Src/: CHOptim.cpp  CHcodec.cpp  CHufftables.cpp  CJBlock.cpp  CJPEGDecoder.cpp  CJPEGLossLessCoder.cpp  CJPEGLossyCoder.cpp  CQuantizationTable.cpp  CompressJPEG.cpp  Makefile  makefile.vc
PublicDecompWT-2.8.1/COMP/Src/: CBuffer.cpp  CImage.cpp  CQualityMeasures.cpp  Makefile  makefile.vc
PublicDecompWT-2.8.1/COMP/T4/: CMakeLists.txt  T4.dsp  T4.plg
PublicDecompWT-2.8.1/COMP/T4/Inc/: CBitBuffer.h  CompressT4.h  T4Coder.h  T4Codes.h  T4Decoder.h
PublicDecompWT-2.8.1/COMP/T4/Src/: CBitBuffer.cpp  CompressT4.cpp  Makefile  T4Coder.cpp  T4Codes.cpp  T4Decoder.cpp  makefile.vc
PublicDecompWT-2.8.1/COMP/WT/: CMakeLists.txt  WT.dsp  WT.plg
PublicDecompWT-2.8.1/COMP/WT/Inc/: CACCoder.h  CACDecoder.h  CACModel.h  CVLCCodec.h  CVLCCoder.h  CVLCDecoder.h  CWBlock.h  CWTCoder.h  CWTDecoder.h  CompressWT.h  WTConst.h
PublicDecompWT-2.8.1/COMP/WT/Src/: CACCoder.cpp  CACDecoder.cpp  CACModel.cpp  CVLCCoder.cpp  CVLCDecoder.cpp  CWBlock.cpp  CWTCoder.cpp  CWTDecoder.cpp  CompressWT.cpp  Makefile  makefile.vc
PublicDecompWT-2.8.1/DISE/: CDataField.h  CMakeLists.txt  CSpacecraftID.h  CSpectralChannelID.h  CxRITAnnotation.cpp  CxRITAnnotation.h  CxRITFile.cpp  CxRITFile.h  CxRITFileCompressed.h  CxRITFileDecompressed.h  CxRITFileHeaderRecords.cpp  CxRITFileHeaderRecords.h  DISE.dsp  DISE.plg  ErrorHandling.cpp  ErrorHandling.h  GSDS_Volume_F.h  GSDS_Volume_F_NBO.h  MSGTime.h  MSGTime_impl.h  Makefile  SmartPtr.h  TimeSpan.cpp  TimeSpan.h  Types.h  UTCTime.cpp  UTCTime.h  YYYYMMDDhhmm.h  makefile.vc
PublicDecompWT-2.8.1/conda/: bld.bat  build.sh  meta.yaml
PublicDecompWT-2.8.1/xRITDecompress/: CMakeLists.txt  xRITDecompress.cpp
QSgp4/: CMakeLists.txt  Matrices.cpp  Matrices.h  QSgp4.pro  README.md  Vectors.h  qeci.cpp  qeci.h  qgeocentric.h  qgeodetic.h  qobserver.cpp  qobserver.h  qsgp4.cpp  qsgp4.h  qsgp4date.cpp  qsgp4date.h  qsgp4globals.h  qsgp4utilities.h  qsun.cpp  qsun.h  qtle.cpp  qtle.h  qtopocentric.h  sgp_time.cpp
SOIL/: SOIL.cpp  SOIL.pro  glext.h
aaplus/: AA+.h  AADiameters.cpp  AADiameters.h  AADynamicalTime.cpp  AAParallax.cpp  AAPhysicalMoon.cpp  AATest.cpp  AAVSOP2013.cpp  CMakeLists.txt
bz2/: CMakeLists.txt  bz2.pro
core/: CMakeLists.txt  EUMETCastView.ini  EUMETCastView.qrc  avhrrsatellite.cpp  avhrrsatellite.h  colormaps.h  core.pro  cylequidist.cpp  cylequidist.h  datahubaccessmanager.cpp  datahubaccessmanager.h  dialogpreferences.cpp  dialogpreferences.h  dialogpreferences.ui  dialogsaveimage.cpp  dialogsaveimage.h  dialogsaveimage.ui  downloadmanager.cpp  downloadmanager.h  equirectangular.cpp  equirectangular.h  formephem.cpp  formephem.h  formephem.ui  formgeostationary.cpp  formgeostationary.h  formgeostationary.ui  formimage.cpp  formimage.h  forminfrascales.cpp  forminfrascales.h  formmapcyl.cpp  formmapcyl.h  formmapcyl.ui  formmovie.cpp  formmovie.h  formmovie.ui  formtoolbox.cpp  formtoolbox.h  formtoolbox.ui  (+143 more)
core/icons/oxygen/: index.theme
core/shader/: draw.frag  draw.vert  earthshader.frag  earthshader.vert  gshhs.frag  gshhs.vert  sats.frag  sats.vert  skybox.frag  skybox.vert  texturewriter.frag  texturewriter.vert
meteosatlib/: CMakeLists.txt  Compress.h  MSG_HRIT.cpp  MSG_HRIT.h  MSG_channel.cpp  MSG_channel.h  MSG_compression.cpp  MSG_compression.h  MSG_data.cpp  MSG_data.h  MSG_data_CelestialEvents.cpp  MSG_data_CelestialEvents.h  MSG_data_GeometricProc.cpp  MSG_data_GeometricProc.h  MSG_data_GeometricQuality.cpp  MSG_data_GeometricQuality.h  MSG_data_IMPFConfiguration.cpp  MSG_data_IMPFConfiguration.h  MSG_data_ImageAcquisition.cpp  MSG_data_ImageAcquisition.h  MSG_data_ImageDescription.cpp  MSG_data_ImageDescription.h  MSG_data_ImageProdStats.cpp  MSG_data_ImageProdStats.h  MSG_data_NavigExtrResult.cpp  MSG_data_NavigExtrResult.h  MSG_data_RadiometricProc.cpp  MSG_data_RadiometricProc.h  MSG_data_RadiometricQuality.cpp  MSG_data_RadiometricQuality.h  MSG_data_SGS_header.cpp  MSG_data_SGS_header.h  MSG_data_SatelliteStatus.cpp  MSG_data_SatelliteStatus.h  MSG_data_TimelinComple.cpp  MSG_data_TimelinComple.h  MSG_data_format.cpp  MSG_data_format.h  MSG_data_gts.cpp  MSG_data_gts.h  (+41 more)
meteosatlib/xrit/: dataaccess.cpp  dataaccess.h  fileaccess.cpp  fileaccess.h
video/: CMakeLists.txt  README.md  generalverticalperspective.cpp  generalverticalperspective.h  geoseglist.cpp  geoseglist.h  globals.cpp  globals.h  gshhs.h  gshhsdata.cpp  gshhsdata.h  main.cpp  msgdataaccess.cpp  msgdataaccess.h  msgfileaccess.cpp  msgfileaccess.h  pixgeoconversion.cpp  rssvideo.cpp  rssvideo.h  sgp4sdp4.h  video.pro  xmlvideo.cpp  xmlvideo.h  xmlvideoreader.cpp  xmlvideoreader.h
